// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldSelect__Select /> should render correctly 1`] = `
.c0 .ms-ComboBox {
  margin: 0;
  box-sizing: border-box;
}

.c0 .ms-ComboBox:hover {
  border-color: #333333;
}

.c0 label {
  color: #333333;
}

.c0 * {
  cursor: pointer;
}

<CustomizedComboBox
  className="c0"
/>
`;

exports[`FieldFile should render properly when disabled 1`] = `
.c0 .ms-ComboBox {
  margin: 0;
  box-sizing: border-box;
}

.c0 label {
  color: #333333;
}

.c0 * {
  cursor: default;
}

<CustomizedComboBox
  className="c0"
  disabled={true}
/>
`;

exports[`FieldFile should render properly when not disabled 1`] = `
.c0 .ms-ComboBox {
  margin: 0;
  box-sizing: border-box;
}

.c0 .ms-ComboBox:hover {
  border-color: #333333;
}

.c0 label {
  color: #333333;
}

.c0 * {
  cursor: pointer;
}

<CustomizedComboBox
  className="c0"
  disabled={false}
/>
`;

exports[`FieldSelect should render correctly 1`] = `
<FieldSelect__Select
  errorMessage=""
  name="test name"
  onChanged={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "key": "key1",
        "text": "text 1",
      },
      Object {
        "key": "key2",
        "text": "text 2",
      },
      Object {
        "key": "key3",
        "text": "text 3",
      },
    ]
  }
  selectedKey=""
/>
`;
